placed images in icon folder

--- a/Avishek/index.html
+++ b/Avishek/index.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class="img1">
-            <img src="Illustration.webp" alt="">
+            <img src="./icons/Illustration.webp" alt="">
         </div>
     </div>
 
@@ -70,31 +70,31 @@
 
         <div class="animation">
             <div class="ani1">
-                <img src="Crocs-Colored-Logo.svg" alt="">
+                <img src="./icons/Crocs-Colored-Logo.svg" alt="">
             </div>
             <div class="ani1">
-                <img src="Bitly-V2.svg" alt="">
+                <img src="./icons/Bitly-V2.svg" alt="">
             </div>
             <div class="ani1">
-                <img src="Compass__2_.svg" alt="">
+                <img src="./icons/Compass__2_.svg" alt="">
             </div>
             <div class="ani1">
-                <img src="dropbox.svg" alt="">
+                <img src="./icons/dropbox.svg" alt="">
             </div>
             <div class="ani1">
-                <img src="G2_Crowd_logo_1__Traced_.svg" alt="">
+                <img src="./icons/G2_Crowd_logo_1__Traced_.svg" alt="">
             </div>
             <div class="ani1">
-                <img src="lya.svg" alt="">
+                <img src="./icons/lya.svg" alt="">
             </div>
             <div class="ani1">
-                <img src="Pendo.svg" alt="">
+                <img src="./icons/Pendo.svg" alt="">
             </div>
             <div class="ani1">
-                <img src="Vector__2_.svg" alt="">
+                <img src="./icons/Vector__2_.svg" alt="">
             </div>
             <div class="ani1">
-                <img src="Zendesk_wordmark__1_.svg" alt="">
+                <img src="./icons/Zendesk_wordmark__1_.svg" alt="">
             </div>
         </div>
     </div>
@@ -111,7 +111,7 @@
                 <p>Connect your calendar and Calendly will help you create scheduling links and booking pages based on your availability. Share your Calendly link with others so people can book time with you in one click.</p>
             </div>
             <div class="img2">
-                <img src="Calendly-Email-Embed-Recruiting.webp" alt="">
+                <img src="./icons/Calendly-Email-Embed-Recruiting.webp" alt="">
             </div>
         </div>
 
@@ -122,7 +122,7 @@
                 <p>Booking links can be based on different event types - from 15-minute Zoom calls to 30-minute in-person meetings – and rules. Include other members of your team, route the meeting to the right people on your team, and collaborate around scheduling requirements.</p>
             </div>
             <div class="img2">
-                <img src="Calendly-Round-Robin.webp" alt="">
+                <img src="./icons/Calendly-Round-Robin.webp" alt="">
             </div>
         </div>
         <div class="steps">
@@ -132,7 +132,7 @@
                 <p>Workflows and integrations connect Calendly to your process and other tools. Send reminders, follow-ups, and connect your CRM, video conferencing, and even billing platforms!</p>
             </div>
             <div class="img2">
-                <img src="Calendly-Teams-Workflows.webp" alt="">
+                <img src="./icons/Calendly-Teams-Workflows.webp" alt="">
             </div>
         </div>
 
@@ -143,7 +143,7 @@
                 <p>With Calendly commonly used to power meetings with prospects, customers, recruits and more, it’s ideal to power scheduling for your whole company with meeting analytics, and enterprise-ready admin, security, and IT-oriented features.</p>
             </div>
             <div class="img2">
-                <img src="Calendly-Enterprise-Small__3_.webp" alt="">
+                <img src="./icons/Calendly-Enterprise-Small__3_.webp" alt="">
             </div>
         </div>
     </div>
@@ -155,31 +155,31 @@
         </div>
         <div class="icon">
             <div class="icons">
-                <img src="All_team.svg" alt="">
+                <img src="./icons/All_team.svg" alt="">
                 <p>All Teams</p>
             </div>
             <div class="icons">
-                <img src="sales.svg" alt="">
+                <img src="./icons/sales.svg" alt="">
                 <p>Sales</p>
             </div>
             <div class="icons">
-                <img src="Marketing.svg" alt="">
+                <img src="./icons/Marketing.svg" alt="">
                 <p>Marketing</p>
             </div>
             <div class="icons">
-                <img src="customer.svg" alt="">
+                <img src="./icons/customer.svg" alt="">
                 <p>Customer Success</p>
             </div>
             <div class="icons">
-                <img src="recuruting.svg" alt="">
+                <img src="./icons/recuruting.svg" alt="">
                 <p>Recruiting</p>
             </div>
             <div class="icons">
-                <img src="IT.svg" alt="">
+                <img src="./icons/IT.svg" alt="">
                 <p>IT</p>
             </div>
             <div class="icons">
-                <img src="Education.svg" alt="">
+                <img src="./icons/Education.svg" alt="">
                 <p>Education</p>
             </div>
         </div>
@@ -215,7 +215,7 @@
             </div>
 
             <div class="sub_img">
-                <img src="availability.webp" alt="">
+                <img src="./icons/availability.webp" alt="">
             </div>
         </div>
     </div>
@@ -226,32 +226,32 @@
 
         <div class="sec">
             <div class="sec1">
-                <img src="Calendly-Mobile-App-Browsers.webp" alt="">
+                <img src="./icons/Calendly-Mobile-App-Browsers.webp" alt="">
             </div>
             <div class="sec2">
                 <div class="sec_sub">
-                    <img src="sub-1.svg" alt="">
+                    <img src="./icons/sub-1.svg" alt="">
                     <h4>Calendly for Browser</h4>
                     <p>Use Calendly while you're on the web, without switching tabs.</p>
                     <a href="">Learn more</a>
                 </div>
                 
                 <div class="sec_sub">
-                    <img src="sub-2.svg" alt="">
+                    <img src="./icons/sub-2.svg" alt="">
                     <h4>Calendly for Mobile</h4>
                     <p>Book meetings, get notifications,& more on the go.</p>
                     <a href="">Learn more</a>
                 </div>
 
                 <div class="sec_sub">
-                    <img src="sub-3.svg" alt="">
+                    <img src="./icons/sub-3.svg" alt="">
                     <h4>Calendly for CRMs</h4>
                     <p>Make booking meetings simple for teams who use CRMs.</p>
                     <a href="">Learn more</a>
                 </div>
 
                 <div class="sec_sub">
-                    <img src="sub4.svg" alt="">
+                    <img src="./icons/sub4.svg" alt="">
                     <h4>Calendly for Payments</h4>
                     <p>Streamline payments for CAlendly events, with Paypal or Stripe.</p>
                     <a href="">Learn more</a>
@@ -273,12 +273,12 @@
                 <a href="#">Learn more</a>
             </div>
             <div class="admin_sub_img">
-                <img src="Admin.webp" alt="">
+                <img src="./icons/Admin.webp" alt="">
             </div>
         </div>
         <div class="security">
             <div class="security_img">
-                <img src="security.webp" alt="">
+                <img src="./icons/security.webp" alt="">
             </div>
             <div class="security_txt">
                 <span>YOU CAN DEPEND ON US</span>
@@ -295,7 +295,7 @@
                 <a href="#">Learn more</a>
             </div>
             <div class="admin_sub_img">
-                <img src="Design.webp" alt="">
+                <img src="./icons/Design.webp" alt="">
             </div>
         </div>
         <h1>Designed to speed up sales cycles for teams just like yours</h1>
@@ -309,7 +309,7 @@
                 <p>Book high-value meetings in seconds and turn scheduling into a competitive advantage.</p>
             </div>
             <div class="des_img">
-                <img src="Calendly-Sales-Small-new_io.webp" alt="">
+                <img src="./icons/Calendly-Sales-Small-new_io.webp" alt="">
             </div>
         </div>
 
