--- a/Umer/solutions.html
+++ b/Umer/solutions.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link rel="stylesheet" href="solutions.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
     <!-- Option 1: Include in HTML -->
     <link
       rel="stylesheet"
@@ -223,18 +227,165 @@
             Accelerate success at every stage of your sales cycle and drive more
             revenue.
           </p>
+          <div class="learn-more">
+            <p id="lmore">Learn More</p>
+            <span class="material-symbols-outlined"> arrow_forward </span>
+          </div>
         </div>
 
-        <button class="accordion">Section 2</button>
+        <button class="accordion">
+          <h3>Recruiting</h3>
+          <span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+              style="width: 20px"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m19.5 8.25-7.5 7.5-7.5-7.5"
+              />
+            </svg>
+          </span>
+        </button>
         <div class="panel">
-          <p>Lorem ipsum...</p>
+          <p>
+            Increase candidate pipeline and hire faster with easier scheduling.
+          </p>
+          <div class="learn-more">
+            <p id="lmore">Learn More</p>
+            <span class="material-symbols-outlined"> arrow_forward </span>
+          </div>
         </div>
 
-        <button class="accordion">Section 3</button>
+        <button class="accordion">
+          <h3>Customer Success</h3>
+          <span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+              style="width: 20px"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m19.5 8.25-7.5 7.5-7.5-7.5"
+              />
+            </svg>
+          </span>
+        </button>
         <div class="panel">
-          <p>Lorem ipsum...</p>
+          <p>
+            Deliver better customer experience to improve retention and growth.
+          </p>
+          <div class="learn-more">
+            <p id="lmore">Learn More</p>
+            <span class="material-symbols-outlined"> arrow_forward </span>
+          </div>
+        </div>
+
+        <button class="accordion">
+          <h3>Marketing</h3>
+          <span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+              style="width: 20px"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m19.5 8.25-7.5 7.5-7.5-7.5"
+              />
+            </svg>
+          </span>
+        </button>
+        <div class="panel">
+          <p>
+            Supercharge your lead gen to boost conversion rates and drive more
+            pipeline.
+          </p>
+          <div class="learn-more">
+            <p id="lmore">Learn More</p>
+            <span class="material-symbols-outlined"> arrow_forward </span>
+          </div>
+        </div>
+
+        <button class="accordion">
+          <h3>Revenue Operations</h3>
+          <span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+              style="width: 20px"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m19.5 8.25-7.5 7.5-7.5-7.5"
+              />
+            </svg>
+          </span>
+        </button>
+        <div class="panel">
+          <p>
+            Integrate best-in-class scheduling to keep every team and
+            opportunity connected.
+          </p>
+          <div class="learn-more">
+            <p id="lmore">Learn More</p>
+            <span class="material-symbols-outlined"> arrow_forward </span>
+          </div>
+        </div>
+
+        <button class="accordion">
+          <h3>Information Technology</h3>
+          <span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+              style="width: 20px"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m19.5 8.25-7.5 7.5-7.5-7.5"
+              />
+            </svg>
+          </span>
+        </button>
+        <div class="panel">
+          <p>
+            Centralize teams and reduce risk with enterprise-grade security.
+          </p>
+          <div class="learn-more">
+            <p id="lmore">Learn More</p>
+            <span class="material-symbols-outlined"> arrow_forward </span>
+          </div>
         </div>
       </div>
+
       <div class="right">
         <img src="sales_img.webp" alt="" />
       </div>
@@ -252,8 +403,8 @@
       </div>
 
       <div class="rightside">
-        <div class="tag">
-          <h3>Financial Services</h3>
+        <button class="accordion">
+          <h3 id="acch3">Financial Services</h3>
           <span>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -271,10 +422,20 @@
               />
             </svg>
           </span>
+        </button>
+        <div class="panel">
+          <p>
+            Modernize your client experience, boost client engagement, and
+            improve productivity to grow your business.
+          </p>
+          <div class="learn-more">
+            <p id="lmore">Learn More</p>
+            <span class="material-symbols-outlined"> arrow_forward </span>
+          </div>
         </div>
 
-        <div class="tag">
-          <h3>Education</h3>
+        <button class="accordion">
+          <h3 id="acch3">Education</h3>
           <span>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -292,10 +453,20 @@
               />
             </svg>
           </span>
+        </button>
+        <div class="panel">
+          <p>
+            Boost student engagement, increase accessibility to resources, and
+            accelerate the admissions cycle.
+          </p>
+          <div class="learn-more">
+            <p id="lmore">Learn More</p>
+            <span class="material-symbols-outlined"> arrow_forward </span>
+          </div>
         </div>
 
-        <div class="tag">
-          <h3>Professional Services</h3>
+        <button class="accordion">
+          <h3 id="acch3">Professional Services</h3>
           <span>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -313,10 +484,20 @@
               />
             </svg>
           </span>
+        </button>
+        <div class="panel">
+          <p>
+            Provide an exceptional client experience, improve team efficiency,
+            and increase project profitability.
+          </p>
+          <div class="learn-more">
+            <p id="lmore">Learn More</p>
+            <span class="material-symbols-outlined"> arrow_forward </span>
+          </div>
         </div>
 
-        <div class="tag">
-          <h3>Technology</h3>
+        <button class="accordion">
+          <h3 id="acch3">Technology</h3>
           <span>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -334,6 +515,16 @@
               />
             </svg>
           </span>
+        </button>
+        <div class="panel">
+          <p>
+            Win more deals, increase retention, recruit top talent, and connect
+            your tech stack to reach your full potential.
+          </p>
+          <div class="learn-more">
+            <p id="lmore">Learn More</p>
+            <span class="material-symbols-outlined"> arrow_forward </span>
+          </div>
         </div>
       </div>
     </div>
