completion without responsive

--- a/ajay/index.html
+++ b/ajay/index.html
@@ -43,6 +43,10 @@
             <a href="">Log in</a>
             <button value="Get started">Get started</button>
         </div>
+        <div id="ham">
+            <i class="material-icons">menu</i>
+
+        </div>
 
     </header>
     <div id="main">
