adding get started page

--- a/ajay/index.html
+++ b/ajay/index.html
@@ -197,7 +197,7 @@
     <br>
     <br>
     <div id="smarter" data-aos="fade-up">
-        <h1>Smarter scheduling for teams <br>who conduct meetings at scale</h1>
+        <h1>Smarter scheduling for teams who conduct meetings at scale</h1>
     </div>
     <div id="slaesnav" data-aos="fade-up">
         <div id="salesnav1"> <b> <a href="" class="first">Sales</a></b></div>
@@ -255,7 +255,7 @@
 
     <div id="abovelogo" data-aos="fade-up">
         <div id="sync">
-            <h1>Stay in sync from any <br>app, on any device</h1>
+            <h1>Stay in sync from any app, on any device</h1>
         </div>
         <div id="boost">
             <p>Boost productivity with integrations that fold right into your workflow.</p>
@@ -267,6 +267,7 @@
 
     </div>
     <div id="logo1" data-aos="fade-right">
+        <!-- <div id="logo1a1"> -->
         <div id="logo1a">
             <img src="https://www.svgrepo.com/show/452140/zoom.svg" alt="">
         </div>
@@ -277,6 +278,7 @@
             <img src="https://play-lh.googleusercontent.com/_bh6XK3B7TAk7kBXC1GHC0j9eS9cw9wQo2K7fiP7FDGAQlcOqgUPT2lx3WgZ0JlOJh8"
                 alt="">
         </div>
+    <!-- </div> -->
         <div id="logo1a">
             <img src="https://yt3.googleusercontent.com/ytc/AIf8zZQTjGhyv6zCabZQRDnnudwAJ7AoRvnucvEkhi4DSA=s900-c-k-c0x00ffffff-no-rj"
                 alt="">
