--- a/Umer/solutions.html
+++ b/Umer/solutions.html
@@ -37,17 +37,19 @@
         />
       </div>
       <div id="navbar">
-        <a href="" class="special">Product</a>
-        <a href="">Solutions</a>
+        <a href="../Avishek/index.html" class="special">Product</a>
+        <a href="../Umer/solutions.html">Solutions</a>
         <i class="material-icons">expand_more</i>
         <a href="">Enterprise</a>
-        <a href="">Pricing</a>
-        <a href="">Resources</a>
+        <a href="../Manish/pricing.html">Pricing</a>
+        <a href="../resources-Pushkin/resources.html">Resources</a>
         <i class="material-icons">expand_more</i>
       </div>
       <div id="login">
         <a href="">Log in</a>
-        <button value="Get started">Get started</button>
+        <a href="./get.html">
+          <button value="Get started">Get started</button></a
+        >
       </div>
     </header>
 
