Made some change to make it good responsive

--- a/Manish/pricing.html
+++ b/Manish/pricing.html
@@ -168,9 +168,8 @@
                         </span>
                     </div>
 
-                    <p class="plan-description" style="margin-bottom: 0.8rem;">For teams who need advanced features such
-                        as reporting, meeting
-                        distribution, and automations</p>
+                    <p class="plan-description" style="margin-bottom: 0.8rem;">For teams who need features such
+                        as reporting, meeting distribution and automations</p>
                     <div class="price-details">
                         <h3 class="price">$16</h3>
                         <div class="price-info">
@@ -250,7 +249,7 @@
                     <div class="plan-header">
                         <h4 class="plan-title">Enterprise</h4>
                     </div>
-                    <p class="plan-description">For teams who need enterprise-level security, admin control and support
+                    <p class="plan-description" style="margin-bottom: 0.8rem">For teams who need enterprise-level security, admin control and support
                     </p>
                     <div class="price-details">
                         <h3 class="price">Custom</h3>
@@ -337,7 +336,7 @@
                         </div>
                     </div>
                     <div class="card-button sign-up-button">
-                        <a href="#"><span>Get started</span></a>
+                        <a href="#"><span>Sign up</span></a>
                     </div>
                 </div>
 
@@ -352,7 +351,7 @@
                         </div>
                     </div>
                     <div class="card-button teams-button sign-up-button">
-                        <a class="try-for-free" href="#"><span>Try for free</span></a>
+                        <a href="#"><span>Sign up</span></a>
                     </div>
                 </div>
 
@@ -364,7 +363,7 @@
                         <h3 class="price">Custom</h3>
                     </div>
                     <div class="card-button sign-up-button">
-                        <a href="#"><span>Talk to sales</span></a>
+                        <a href="#"><span>Contact us</span></a>
                     </div>
                 </div>
             </div>
@@ -997,40 +996,5 @@
 
     </section>
     
-    <script>
-        // var stickyHeader = document.querySelector('.pricing-table');
-        // var content = document.querySelector('pricing-table-wrapper');
-
-        // window.addEventListener('scroll', function () {
-        //     var contentBottom = content.offsetTop + content.clientHeight;
-        //     var scrollPosition = window.scrollY;
-
-        //     if (scrollPosition > contentBottom) {
-        //         // Scroll position is beyond the content, hide the sticky header
-        //         stickyHeader.style.opacity = '0';
-        //     } else {
-        //         // Scroll position is within or above the content, show the sticky header
-        //         stickyHeader.style.opacity = '1';
-        //     }
-        // });
-
-        //     document.addEventListener("DOMContentLoaded", function() {
-        //         var pricingTable = document.querySelector('.pricing-table');
-        //         var pricingTableWrapper = document.getElementById('pricing-table-wrapper');
-
-        //         pricingTableWrapper.addEventListener('scroll', function() {
-        //             // Check if the scroll position of the pricingTableWrapper is greater than its height
-        //             var bookingElement = document.getElementById('faq-section');
-        //             if (bookingElement) {
-        //             if (pricingTableWrapper.scrollTop > 0) {
-        //                 pricingTable.classList.add('hidden');
-        //             } else {
-        //                 pricingTable.classList.remove('hidden');
-        //             }
-        //         }
-        //         });
-        //     });
-    </script>
 </body>
-
 </html>
