Completes the solution page with responsiveness

--- a/Umer/solutions.html
+++ b/Umer/solutions.html
@@ -51,6 +51,9 @@
           <button value="Get started">Get started</button></a
         >
       </div>
+      <div id="ham">
+        <i class="material-icons">menu</i>
+      </div>
     </header>
 
     <!-- Solutions -->
