adding the final file with responsiveness

--- a/ajay/index.html
+++ b/ajay/index.html
@@ -26,22 +26,22 @@
     </div>
     <header id="head">
         <div id="calendlyimage">
-            <img src="https://marketing-assets.calendly.com/media/logo.svg" alt="" width="150px">
+          <a href="./index.html">  <img src="https://marketing-assets.calendly.com/media/logo.svg" alt="" width="150px"></a>
 
         </div>
         <div id="navbar">
-            <a href="" class="special">Product</a>
-            <a href="">Solutions</a>
+            <a href="../Avishek/index.html" class="special">Product</a>
+            <a href="../Umer/solutions.html">Solutions</a>
             <i class="material-icons">expand_more</i>
-            <a href="">Enterprise</a>
-            <a href="">Pricing</a>
-            <a href="">Resources</a>
+            <a href="../">Enterprise</a>
+            <a href="../Manish/pricing.html">Pricing</a>
+            <a href="../resources-Pushkin/resources.html">Resources</a>
             <i class="material-icons">expand_more</i>
 
         </div>
         <div id="login">
             <a href="">Log in</a>
-            <button value="Get started">Get started</button>
+           <a href="./get.html"> <button value="Get started">Get started</button></a>
         </div>
         <div id="ham">
             <i class="material-icons">menu</i>
@@ -302,6 +302,7 @@
 
     </div>
     <br>
+    <br>
 
     <div id="logo2" data-aos="fade-right">
         <div id="logo2a">
@@ -330,7 +331,8 @@
                 alt=""></div>
         <div id="logo2d"><img src="https://cdn.pixabay.com/photo/2018/05/08/21/29/paypal-3384015_1280.png" alt=""></div>
     </div>
-    <br><br>
+    <br>
+    <br>
     <div id="together">
         <h1>We make scheduling easier than <br> ever for you</h1>
         <div id="Meeting">
@@ -403,7 +405,7 @@
     <br><br>
     <div id="see">
         <h1>See Calendly in action</h1>
-        <p>Calendly is the scheduling automation platform with team-based scheduling, solutions and <br>integrations for
+        <p>Calendly is the scheduling automation platform with team-based scheduling, solutions and  integrations for
             every department, and advanced security features</p>
         <div id="for">
             <a href="">Sign up for free</a>
