--- a/ajay/get.html
+++ b/ajay/get.html
@@ -7,6 +7,8 @@
     <title>Get started</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="get.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
 
 
 </head>
