--- a/Umer/solutions.html
+++ b/Umer/solutions.html
@@ -46,7 +46,7 @@
         <i class="material-icons">expand_more</i>
       </div>
       <div id="login">
-        <a href="">Log in</a>
+        <a href="" id="lgin">Log in</a>
         <a href="./get.html">
           <button value="Get started">Get started</button></a
         >
