--- a/ajay/index.html
+++ b/ajay/index.html
@@ -40,7 +40,7 @@
 
         </div>
         <div id="login">
-            <a href="">Log in</a>
+            <a href="../login-Pushkin/login.html">Log in</a>
            <a href="./get.html"> <button value="Get started">Get started</button></a>
         </div>
         <div id="ham">
