--- a/Umer/solutions.html
+++ b/Umer/solutions.html
@@ -30,11 +30,12 @@
     </div>
     <header id="head">
       <div id="calendlyimage">
-        <img
-          src="https://marketing-assets.calendly.com/media/logo.svg"
-          alt=""
-          width="150px"
-        />
+        <a href="../ajay/index.html">
+          <img
+            src="https://marketing-assets.calendly.com/media/logo.svg"
+            alt=""
+            width="150px"
+        /></a>
       </div>
       <div id="navbar">
         <a href="../Avishek/index.html" class="special">Product</a>
