--- a/ajay/index.html
+++ b/ajay/index.html
@@ -26,7 +26,7 @@
     </div>
     <header id="head">
         <div id="calendlyimage">
-          <a href="./index.html">  <img src="https://marketing-assets.calendly.com/media/logo.svg" alt="" width="150px"></a>
+          <a href="../ajay/index.html">  <img src="https://marketing-assets.calendly.com/media/logo.svg" alt="" width="150px"></a>
 
         </div>
         <div id="navbar">
