Made some changes in header and footer

--- a/Manish/pricing.html
+++ b/Manish/pricing.html
@@ -24,7 +24,7 @@
     </div>
     <header id="head">
         <div id="calendlyimage">
-            <a href="./index.html"> <img src="https://marketing-assets.calendly.com/media/logo.svg" alt=""
+            <a href="../ajay/index.html"> <img src="https://marketing-assets.calendly.com/media/logo.svg" alt=""
                     width="150px">
             </a>
         </div>
