--- a/Umer/solutions.html
+++ b/Umer/solutions.html
@@ -41,7 +41,7 @@
         <a href="../Avishek/index.html" class="special">Product</a>
         <a href="../Umer/solutions.html">Solutions</a>
         <i class="material-icons">expand_more</i>
-        <a href="">Enterprise</a>
+        <a href="../karndip/index.html">Enterprise</a>
         <a href="../Manish/pricing.html">Pricing</a>
         <a href="../resources-Pushkin/resources.html">Resources</a>
         <i class="material-icons">expand_more</i>
