--- a/Umer/solutions.html
+++ b/Umer/solutions.html
@@ -48,7 +48,7 @@
       </div>
       <div id="login">
         <a href="../login-Pushkin/login.html" id="lgin">Log in</a>
-        <a href="./get.html">
+        <a href="../ajay/get.html">
           <button value="Get started">Get started</button></a
         >
       </div>
