linking all the pages

--- a/resources-Pushkin/resources.html
+++ b/resources-Pushkin/resources.html
@@ -22,7 +22,7 @@
       <span>English</span>
       <i class="material-icons">expand_more</i>
     </div>
-    <header id="head">
+    <!-- <header id="head">
       <div id="calendlyimage">
         <img
           src="https://marketing-assets.calendly.com/media/logo.svg"
@@ -43,7 +43,32 @@
         <a href="">Log in</a>
         <button value="Get started">Get started</button>
       </div>
-    </header>
+    </header> -->
+    <header id="head">
+      <div id="calendlyimage">
+        <a href="../ajay/index.html">  <img src="https://marketing-assets.calendly.com/media/logo.svg" alt="" width="150px"></a>
+
+      </div>
+      <div id="navbar">
+          <a href="../Avishek/index.html" class="special">Product</a>
+          <a href="../Umer/solutions.html">Solutions</a>
+          <i class="material-icons">expand_more</i>
+          <a href="../">Enterprise</a>
+          <a href="../Manish/pricing.html">Pricing</a>
+          <a href="../resources-Pushkin/resources.html">Resources</a>
+          <i class="material-icons">expand_more</i>
+
+      </div>
+      <div id="login">
+          <a href="../login-Pushkin/login.html">Log in</a>
+         <a href="./get.html"> <button value="Get started">Get started</button></a>
+      </div>
+      <div id="ham">
+          <i class="material-icons">menu</i>
+
+      </div>
+
+  </header>
     <section class="resourceHubHero">
       <div class="resourceHubHeroLeft">
         <h6>RESOURCES</h6>
