adding readme file for home and get started page

--- a/ajay/index.html
+++ b/ajay/index.html
@@ -33,7 +33,7 @@
             <a href="../Avishek/index.html" class="special">Product</a>
             <a href="../Umer/solutions.html">Solutions</a>
             <i class="material-icons">expand_more</i>
-            <a href="../">Enterprise</a>
+            <a href="../karndip/index.html">Enterprise</a>
             <a href="../Manish/pricing.html">Pricing</a>
             <a href="../resources-Pushkin/resources.html">Resources</a>
             <i class="material-icons">expand_more</i>
@@ -303,7 +303,7 @@
     </div>
     <br>
     <br>
-
+<br>
     <div id="logo2" data-aos="fade-right">
         <div id="logo2a">
             <img src="https://www.liblogo.com/img-logo/max/hu1925ha24-hubspot-logo-hubspot-logo-logos-icon-free-download-on-iconfinder.png"
