adding updated getstarted page

--- a/ajay/get.html
+++ b/ajay/get.html
@@ -23,7 +23,8 @@
     </div>
     <header id="head">
         <div id="calendlyimage">
-            <img src="https://marketing-assets.calendly.com/media/logo.svg" alt="" width="150px">
+            <a href="../ajay/index.html">  <img src="https://marketing-assets.calendly.com/media/logo.svg" alt="" width="150px"></a>
+
 
         </div>
 
