Made some changes

--- a/Manish/pricing.html
+++ b/Manish/pricing.html
@@ -22,7 +22,7 @@
         <span>English</span>
         <i class="material-icons">expand_more</i>
     </div>
-    
+
     <header id="head">
         <div id="calendlyimage">
             <a href="../ajay/index.html"> <img src="https://marketing-assets.calendly.com/media/logo.svg" alt=""
@@ -33,14 +33,14 @@
             <a href="../Avishek/index.html" class="special">Product</a>
             <a href="../Umer/solutions.html">Solutions</a>
             <i class="material-icons">expand_more</i>
-            <a href="../">Enterprise</a>
+            <a href="../karndip/index.html">Enterprise</a>
             <a href="../Manish/pricing.html">Pricing</a>
             <a href="../resources-Pushkin/resources.html">Resources</a>
             <i class="material-icons">expand_more</i>
 
         </div>
         <div id="login">
-            <a href="">Log in</a>
+            <a href="../login-Pushkin/login.html">Log in</a>
             <a href="./get.html"> <button value="Get started">Get started</button></a>
         </div>
         <div id="ham">
