--- a/karndip/index.html
+++ b/karndip/index.html
@@ -47,7 +47,7 @@
           <i class="material-icons">expand_more</i>
         </div>
         <div id="login">
-          <a href="" id="lgin">Log in</a>
+          <a href="../login-Pushkin/login.html" id="lgin">Log in</a>
           <a href="./get.html">
             <button value="Get started">Get started</button></a
           >
