some changes done in below navbar part

--- a/karndip/index.html
+++ b/karndip/index.html
@@ -77,9 +77,9 @@
                         <span class="material-symbols-outlined">
                             chat_bubble
                         </span>
-                        <span class="learnmore">Chat with support</span>
-                        <span>
+                        <span class="learnmore">Chat with support            
                         </span>
+                       
                     </button>
                 </div>
                 
